# hp_ctl

./: .gitignore  99-usb-serial.rules  Makefile  Protocol_Communication_Summary.md  README.md  config.yaml  features.md  hp-ctl.service  install.sh  pyproject.toml  requirements_test.txt  review.md  tox.ini
src/: __init__.py
src/hp_ctl/: __init__.py  __main__.py  command_manager.py  config.py  decoder.py  homeassistant.py  main.py  message.py  mqtt.py  protocol.py  uart.py
src/hp_ctl/automation/: __init__.py  algorithm.py  config.py  controller.py  discovery.py  storage.py  weather.py
src/hp_ctl/components/: __init__.py
tests/: __init__.py  conftest.py  test_automation_algorithm.py  test_automation_config.py  test_automation_controller.py  test_automation_discovery.py  test_automation_integration.py  test_automation_storage.py  test_automation_weather.py  test_command_manager.py  test_config_limits.py  test_decoder.py  test_example.py  test_homeassistant.py  test_integration.py  test_mqtt.py  test_protocol.py  test_protocol_encode.py  test_uart.py
tests/components/: __init__.py
tests/fixtures/: decoder_test_cases.yaml
